# RustyHTTP

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/forge/: Cargo.toml
crates/forge-config/: Cargo.toml
crates/forge-config/src/: error.rs
crates/forge-http/: Cargo.toml
crates/forge-http/src/: error.rs  lib.rs  method.rs  request.rs  response.rs  status.rs
crates/forge-logging/: Cargo.toml
crates/forge-logging/src/: forge_logging.rs  lib.rs
crates/forge-macros/: Cargo.toml
crates/forge-macros/src/: lib.rs
crates/forge-router/: Cargo.toml
crates/forge-router/src/: handler.rs  lib.rs  macros.rs  router.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: connection.rs  error.rs  lib.rs  listener.rs
crates/forge-utils/: Cargo.toml
crates/forge-utils/src/: lib.rs  path_tree.rs
crates/forge/src/: lib.rs
crates/rusty_config/: Cargo.toml
crates/rusty_config/src/: config.rs
crates/rusty_http/: Cargo.toml
crates/rusty_http/src/: error.rs  http_method.rs  http_status.rs  lib.rs  request.rs  response.rs
crates/rusty_router/: Cargo.toml
crates/rusty_router/src/: error.rs  handler.rs  lib.rs  macros.rs  router.rs
crates/rusty_server/: Cargo.toml
crates/rusty_server/src/: error.rs  lib.rs  request_handler.rs  server.rs
crates/rusty_utils/: Cargo.toml
crates/rusty_utils/src/: lib.rs  logger.rs  path_tree.rs  thread_pool.rs  (+1 more)
dev/bench/: data.js
src/: main.rs
src/modules/: env.rs  logger.rs  mod.rs
(+21 files in other folders)
