[package]
name = "forge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
forge-http = { path = "../forge-http" }
forge-router = { path = "../forge-router" }
forge-utils = { path = "../forge-utils" }
forge-logging = { path = "../forge-logging" }

thiserror = "2.0.17"
tracing = { version = "=0.1.44"}
tokio = { version = "1.49.0", features = ["full"] }